[aliases]
make = sdist bdist_wheel

[metadata]
name = dbcsv
#version = # Set in setup.py
description = Dump & load databases as CSV
long_description = file:README.rst
long_description_content_type = text/x-rst
author = John Thorvald Wodder II
author_email = dbcsv@varonathe.org
license = MIT
license_file = LICENSE
url = https://github.com/jwodder/dbcsv

keywords =
    csv
    database
    sqlalchemy

classifiers =
    Development Status :: 3 - Alpha
    #Development Status :: 4 - Beta
    #Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: MIT License
    Topic :: Database

project_urls =
    Source Code = https://github.com/jwodder/dbcsv
    Bug Tracker = https://github.com/jwodder/dbcsv/issues
    Say Thanks! = https://saythanks.io/to/jwodder

[options]
py_modules = dbcsv
python_requires = ~= 3.5
install_requires =
    SQLAlchemy ~= 1.0
